feat(pa2): implement 5 point baseline

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -155,40 +155,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def RANSAC2(p1, p2, iter, threshold):\n",
+    "    \n",
+    "#     b_inlier = np.array([[]])\n",
+    "#     b_E = None\n",
+    "#     tmp_inlier_len = 0\n",
+    "\n",
+    "#     for i in range(iter):\n",
+    "#     \t# 5개의 Random sample 추출\n",
+    "#         p1s, p2s = randomsample(p1, p2)\n",
+    "        \n",
+    "#         # 5-point algorithm\n",
+    "#         E, cur_inlier = cv2.findEssentialMat(p1s, p2s, maxIters = 0)\n",
+    "\n",
+    "#         # inlier 추출\n",
+    "#         inlier_idx = np.where(cur_inlier==1)\n",
+    "#         pts1 = np.vstack([p1[i] for i in inlier_idx[0]])\n",
+    "#         pts2 = np.vstack([p2[i] for i in inlier_idx[0]])\n",
+    "        \n",
+    "#         # intrinsic parameter 설정\n",
+    "#         skew = 0.0215878\n",
+    "#         K = np.array([[3092.8, skew, 2016], [0, 3092.8, 1512], [0,0,1]])\n",
+    "#         K_inv = np.linalg.inv(K)\n",
+    "        \n",
+    "#         # (x,y) -> Homogeneous Coordinate (x,y,1) 로 변환\n",
+    "#         a, b = rescale_point(pts1, pts2, len(pts1))\n",
+    "\n",
+    "#         if E is None:\n",
+    "#             continue\n",
+    "        \n",
+    "#         # Epipolar constraint = 0\n",
+    "#         cur_E = (b @ K_inv @ E @ K_inv.T @ a.T) \n",
+    "\t\t\n",
+    "#         c = []\n",
+    "#         for i in range(len(pts1)):\n",
+    "#             c.append(cur_E[i][i])\n",
+    "#         c = np.array(c)\n",
+    "        \n",
+    "#         # inlier 수가 가장 많은 E 추출\n",
+    "#         tmp_inlier_len = len(c[(c<threshold) & (c>0)])\n",
+    "#         if len(pts1) > tmp_inlier_len: # 현재 inlier 수 > 최고 inlier 수\n",
+    "#             b_E = cur_E \n",
+    "#             b_inlier = cur_inlier \n",
+    "#             tmp_inlier_len = len(pts1)\n",
+    "    \n",
+    "#     return b_E"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def RANSAC(p1, p2, iteration):\n",
+    "# # intrinsic parameter \n",
+    "# Rt0 = np.hstack((np.eye(3), np.zeros((3, 1))))\n",
+    "# skew = 0.0215878\n",
+    "# K = np.array([[3092.8, skew, 2016], [0, 3092.8, 1512], [0,0,1]])\n",
+    "# Rt1 = K @ CameraMatrix\n",
+    "\n",
+    "# # Rescale to Homogeneous Coordinate\n",
+    "# def rescale_point(pts1, pts2, length):\n",
+    "#     a = [[]]\n",
+    "#     b = [[]]\n",
+    "#     for i in range(length):\n",
+    "#         tmp1 = pts1[i].flatten()\n",
+    "#         tmp1 = np.append(tmp1, 1)\n",
+    "#         a = np.append(a, tmp1)\n",
+    "#         tmp2 = pts2[i].flatten()\n",
+    "#         tmp2 = np.append(tmp2, 1)\n",
+    "#         b = np.append(b, tmp2)\n",
     "    \n",
-    "    b_inlier = np.array([[]]) # best inlier\n",
-    "    b_E = None # best Essential Matrix\n",
-    "    tmp_inlier_len = 0 # tmp inlier의 개수\n",
+    "#     a = a.reshape((length),3)\n",
+    "#     b = b.reshape((length),3)\n",
+    "#     return a, b\n",
     "\n",
-    "    for i in range(iteration):\n",
+    "# p1, p2 = rescale_point(p1, p2, len(p1))\n",
+    "\n",
+    "# # Triangulation\n",
+    "# def LinearTriangulation(Rt0, Rt1, p1, p2):\n",
+    "#     A = [p1[1]*Rt0[2,:] - Rt0[1,:], # x(p 3row) - (p 1row) \n",
+    "#         -(p1[0]*Rt0[2,:] - Rt0[0,:]), # y(p 3row) - (p 2row) \n",
+    "#         p2[1]*Rt1[2,:] - Rt1[1,:], # x'(p' 3row) - (p' 1row) \n",
+    "#         -(p2[0]*Rt1[2,:] - Rt1[0,:])]  # y'(p' 3row) - (p' 2row)\n",
     "        \n",
-    "        # choice random sample\n",
-    "        p1s, p2s = randomsample(p1, p2)\n",
-    "        \n",
-    "        # 5-point algorithm (with intrinsic parameter, epipolar constraint = 0, no RANSAC) \n",
-    "        cur_E, cur_inlier = cv.findEssentialMat(p1s, p2s, focal=3092.8, pp=(2016, 1512),\n",
-    "                                                 maxIters = 0, threshold=0.1)\n",
+    "#     A = np.array(A).reshape((4,4))\n",
+    "#     AA = A.T @ A \n",
+    "#     U, S, VT = np.linalg.svd(AA) # right singular vector\n",
+    " \n",
+    "#     return VT[3,0:3]/VT[3,3]\n",
     "\n",
-    "        # inlier 추출\n",
-    "        inlier_idx = np.where(cur_inlier==1)\n",
-    "        pts1 = np.vstack([p1[i] for i in inlier_idx[0]])\n",
-    "        pts2 = np.vstack([p2[i] for i in inlier_idx[0]])\n",
-    "        \n",
-    "        if cur_E is None:\n",
-    "            continue\n",
+    "# p3ds = []\n",
+    "# for pt1, pt2 in zip(p1, p2):\n",
+    "#     p3d = LinearTriangulation(Rt0, Rt1, pt1, pt2)\n",
+    "#     p3ds.append(p3d)\n",
+    "# p3ds = np.array(p3ds).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matlab.engine\n",
     "\n",
-    "        # inlier 수가 가장 많은 최적의 E 추출\n",
-    "        if len(pts1) > tmp_inlier_len: # 현재 inlier 수 > 가장 많은 inlier 수\n",
-    "            b_E = cur_E \n",
-    "            b_inlier = cur_inlier \n",
-    "            tmp_inlier_len = len(pts1)\n",
-    "\n",
-    "    return b_E"
+    "def five_points(MAXITER):\n",
+    "    \n",
+    "    eng = matlab.engine.start_matlab()\n",
+    "    eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
+    "    for i in range(MAXITER):\n",
+    "        a = np.random.rand(3, 5).tolist()\n",
+    "        a = matlab.double(a)\n",
+    "        b = np.random.rand(3, 5).tolist()\n",
+    "        b = matlab.double(b)\n",
+    "        E = eng.calibrated_fivepoint(a, b)\n",
+    "        # print(np.asarray(E))\n",
+    "    eng.quit()"
    ]
   },
   {
@@ -197,10 +284,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAXITER = 100\n",
-    "# best_inlier = np.array([[]])\n",
-    "# best_E = None\n",
-    "# inlier_len_temp = 0\n",
+    "K = np.array([[3451.5, 0.0, 2312.0], [0.0, 3451.5, 1734], [0.0,0.0,1.0]])\n",
+    "K_inv = np.linalg.inv(K)\n",
+    "cur_E = (b @ K_inv @ E @ K_inv.T @ a.T) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAXITER = 100\n",
+    "best_inlier = np.array([[]])\n",
+    "best_E = None\n",
+    "inlier_len_temp = 0\n",
+    "\n",
+    "# intrinsic parameter\n",
+    "K = np.array([[3451.5, 0.0, 2312.0], [0.0, 3451.5, 1734], [0.0,0.0,1.0]])\n",
+    "K_inv = np.linalg.inv(K)\n",
     "\n",
     "# for i in range(MAXITER):\n",
     "    \n",
@@ -208,7 +310,26 @@
     "#     p1s, p2s = randomsample(p1, p2)\n",
     "    \n",
     "#     # 5-points algorithm\n",
-    "    "
+    "#     eng = matlab.engine.start_matlab()\n",
+    "#     eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
+    "#     cur_E = eng.calibrated_fivepoint(p1s, p2s)\n",
+    "#     eng.quit()\n",
+    "    \n",
+    "#     if cur_E is None:\n",
+    "#         print('Error: E is empty')\n",
+    "\n",
+    "\n",
+    "# select random points\n",
+    "p1s, p2s = randomsample(p1, p2)\n",
+    "\n",
+    "# 5-points algorithm\n",
+    "eng = matlab.engine.start_matlab()\n",
+    "eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
+    "cur_E = eng.calibrated_fivepoint(p1s, p2s)\n",
+    "eng.quit()\n",
+    "\n",
+    "if cur_E is None:\n",
+    "    print('Error: E is empty')\n"
    ]
   },
   {
