feat(pa2): find essential matrix test

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(37935, 128)\n",
+      "(37936, 128)\n",
       "[[  1.   0.   0. ...   1.   7.   7.]\n",
       " [  3.   1.   2. ...   3.   1.   1.]\n",
       " [  0.   1.   2. ...   0.   0.   0.]\n",
@@ -43,7 +43,8 @@
     "img2 = cv.imread('./SfM/Data/sfm04.jpg')\n",
     "\n",
     "# create SIFT instance\n",
-    "sift = cv.xfeatures2d.SIFT_create()\n",
+    "sift = cv.SIFT_create()\n",
+    "# sift = cv.xfeatures2d.SIFT_create()\n",
     "\n",
     "# detect and compute keypoints\n",
     "img1_kp, img1_des = sift.detectAndCompute(img1, None)\n",
@@ -61,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1895\n"
+      "1893\n"
      ]
     }
    ],
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,23 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1895, 2)\n",
-      "[[  24.099754 3219.431   ]\n",
-      " [ 298.76056  2282.336   ]\n",
-      " [ 330.07367  2516.3718  ]]\n",
-      "(1895, 1, 2)\n",
-      "[[[  24.099754 3219.431   ]]\n",
+      "(1893, 2)\n",
+      "[[  24.099752 3219.431   ]\n",
+      " [ 298.76065  2282.336   ]\n",
+      " [ 330.07364  2516.3718  ]]\n",
+      "(1893, 1, 2)\n",
+      "[[[  24.099752 3219.431   ]]\n",
       "\n",
-      " [[ 298.76056  2282.336   ]]\n",
+      " [[ 298.76065  2282.336   ]]\n",
       "\n",
-      " [[ 330.07367  2516.3718  ]]]\n"
+      " [[ 330.07364  2516.3718  ]]]\n"
      ]
     }
    ],
@@ -141,21 +142,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  24.099752, 3219.431   ],\n",
+       "       [ 298.76065 , 2282.336   ],\n",
+       "       [ 330.07364 , 2516.3718  ],\n",
+       "       ...,\n",
+       "       [4551.96    , 3080.2961  ],\n",
+       "       [4573.4385  , 3094.0754  ],\n",
+       "       [4574.8506  , 2760.8474  ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def randomsample(p1, p2):\n",
     "    concat = np.concatenate((p1, p2), axis=1)\n",
     "    rand_mat = concat[np.random.randint(concat.shape[0], size = len(concat)), :]\n",
-    "    p1s = rand_mat[:, :2]\n",
-    "    p2s = rand_mat[:, 2:]\n",
+    "    p1s = rand_mat[:5, :2]\n",
+    "    p2s = rand_mat[:5, 2:]\n",
     "    return p1s, p2s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1893, 4)\n",
+      "1893\n"
+     ]
+    }
+   ],
+   "source": [
+    "concat = np.concatenate((p1, p2), axis=1)\n",
+    "print(concat.shape)\n",
+    "print(len(concat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,43 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "import matlab.engine\n",
     "\n",
-    "def five_points(MAXITER):\n",
-    "    \n",
-    "    eng = matlab.engine.start_matlab()\n",
-    "    eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
-    "    for i in range(MAXITER):\n",
-    "        a = np.random.rand(3, 5).tolist()\n",
-    "        a = matlab.double(a)\n",
-    "        b = np.random.rand(3, 5).tolist()\n",
-    "        b = matlab.double(b)\n",
-    "        E = eng.calibrated_fivepoint(a, b)\n",
-    "        # print(np.asarray(E))\n",
-    "    eng.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "K = np.array([[3451.5, 0.0, 2312.0], [0.0, 3451.5, 1734], [0.0,0.0,1.0]])\n",
-    "K_inv = np.linalg.inv(K)\n",
-    "cur_E = (b @ K_inv @ E @ K_inv.T @ a.T) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "MAXITER = 100\n",
     "best_inlier = np.array([[]])\n",
     "best_E = None\n",
@@ -306,30 +330,32 @@
     "\n",
     "# for i in range(MAXITER):\n",
     "    \n",
-    "#     # select random points\n",
-    "#     p1s, p2s = randomsample(p1, p2)\n",
-    "    \n",
-    "#     # 5-points algorithm\n",
-    "#     eng = matlab.engine.start_matlab()\n",
-    "#     eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
-    "#     cur_E = eng.calibrated_fivepoint(p1s, p2s)\n",
-    "#     eng.quit()\n",
-    "    \n",
-    "#     if cur_E is None:\n",
-    "#         print('Error: E is empty')\n",
-    "\n",
-    "\n",
     "# select random points\n",
     "p1s, p2s = randomsample(p1, p2)\n",
+    "p1s, p2s = np.array(matlab.double(p1s.tolist())), np.array(matlab.double(p2s.tolist()))\n",
     "\n",
     "# 5-points algorithm\n",
-    "eng = matlab.engine.start_matlab()\n",
-    "eng.addpath(\"PA2_Structure_from_Motion/SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
-    "cur_E = eng.calibrated_fivepoint(p1s, p2s)\n",
-    "eng.quit()\n",
+    "# eng = matlab.engine.start_matlab()\n",
+    "# eng.addpath(\"./SfM/Step2/\")  # 'calibrated_fivepoint.m'가 위치한 경로\n",
+    "# cur_E = np.asarray(eng.calibrated_fivepoint(p1s, p2s))\n",
+    "# eng.quit()\n",
+    "\n",
+    "cur_E, cur_inlier = cv.findEssentialMat(p1s, p2s, focal=3451.5, pp=(2312, 1734), maxIters=0, threshold=0.1)\n",
+    "\n",
+    "print(cur_E.shape)\n",
     "\n",
     "if cur_E is None:\n",
-    "    print('Error: E is empty')\n"
+    "    print('Error: E is empty')\n",
+    "\n",
+    "# estim = p1s * cur_E.T * p2s.T\n",
+    "# # inlier\n",
+    "# for i in range(cur_E.shape[1]):\n",
+    "#     tmp = cur_E[:,i]\n",
+    "#     tmp = np.reshape(tmp, [3,3])\n",
+    "#     for j in range(5):\n",
+    "#         estim = \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -352,6 +378,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1893, 2)\n",
+      "[[ 0.04895976  0.38504826 -0.00336808]\n",
+      " [-0.23916036  0.0168629  -0.66520118]\n",
+      " [ 0.07145306  0.58656625 -0.01375776]]\n",
+      "[[0]\n",
+      " [0]\n",
+      " [0]\n",
+      " ...\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def randomsample(p1, p2):\n",
+    "    p1p2 = np.concatenate((p1, p2), axis=1)\n",
+    "    p1p2_ = p1p2[np.random.randint(p1p2.shape[0], size=len(p1)), :]\n",
+    "    p1s = p1p2_[:,:2]\n",
+    "    p2s = p1p2_[:,2:]\n",
+    "    return p1s, p2s\n",
+    "\n",
+    "    \n",
+    "b_inlier = np.array([[]]) # best inlier\n",
+    "b_E = None # best Essential Matrix\n",
+    "tmp_inlier_len = 0 # tmp inlier의 개수\n",
+    "\n",
+    "# choice random sample\n",
+    "p1s, p2s = randomsample(p1, p2)\n",
+    "print(p1s.shape)\n",
+    "\n",
+    "# 5-point algorithm (with intrinsic parameter, epipolar constraint = 0, no RANSAC) \n",
+    "cur_E, cur_inlier = cv.findEssentialMat(p1s, p2s, focal=3092.8, pp=(2016, 1512),\n",
+    "                                            maxIters = 0, threshold=0.1)\n",
+    "\n",
+    "print(cur_E)\n",
+    "print(cur_inlier)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -360,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('opencv_matlab_py38')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -374,12 +448,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc01558cfc5231bffcdc316af059f095dfbeac1d8499ffe2bcda09f240df6faa"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
